@@ -1,3 +1,8 @@
+2012-07-25  Peter Breitenlohner  <peb@mppmu.mpg.de>
+
+	* image/pdftoepdf.cc (get_file_checksum): Use uint64_t and PRIu64.
+	* image/writejp2.w, lua/loslibext.c: Use uint64_t.
+
 2012-07-23  Peter Breitenlohner  <peb@mppmu.mpg.de>
 
 	* tex/texfileio.w (runpopen): Sync with ../lib/texmfmp.c.
